[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Yoshiki YUINE <yoshiki.yuine@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# check latest dependencies following command
# $cargo search [dependencies]

[dependencies]
rand = "0.8.3"
